# urbanity-map

./: .gitignore  README.md
.github/workflows/: deploy.yml
docs/: DATA_PREPARATION.md  DEPLOYMENT_GUIDE.md  LICENSE_SURVEY.md  MONETIZATION.md  SERVICE_IDEAS.md  URBANITY_ALGORITHM.md
docs/01_調査/: GitHub Pages SEO対策調査.md  住みたい街診断アンケート作成の調査.md  市町村別地図色分け手法調査.md  暮らしやすさ指標化手法の論文調査.md  都会度モデル化と店舗データ活用.md  都会度モデル化手法の検討.md  都会度モデル化手法の結論.md
docs/02_要件定義/: requirements.md
docs/02_要件定義/ADR/: 001_タイルサーバー選定.md  002_パフォーマンス最適化.md
docs/03_設計/: system_design.md
frontend/: README.md  index.html  package-lock.json  package.json  search-modal-jsx.txt  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/public/data/: demographics.json  japan-with-scores-v2.geojson  land_price.json  poi-data.json  poi-score.json  population-data.json  (+8 more)
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: README.md  analyze_score_distribution.py  check_duplicates.py  check_missing_tax.py  debug_amedas_format.py  debug_jma_csv.py  debug_smaster_detail.py  debug_station_names.py  debug_unmatched.py  generate_prefecture_borders.py  inspect_data_structure.py  inspect_smaster.py  integrate_scores.py  main.py  prepare-geojson.js  process_census_population.py  process_demographics.py  process_land_price.py  process_night_lights.py  process_poi.py  process_population.py  process_tax.py  process_weather.py  pyproject.toml  show_urbanity_ranks.py  test_coordinate_parsing.py  unzip_population.py  verify_jma_data.py
scripts/tests/: README.md  test_data_assignment.py
(+3 files in other folders)
