[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "input>=0.0.0",
    "numpy>=2.4.0",
    "osmium>=4.2.0",
    "pyarrow>=22.0.0",
    "rasterio>=1.4.4",
    "rasterstats>=0.20.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
